# vana

./: .augmentignore  .claude-flow.config.json  .claude-hooks.json  .dockerignore  .env  .env.backup  .env.ci  .env.example  .env.local.template  .env.m3-auto  .env.memory  .env.n8n.example  .env.prod.example  .gcloudignore  .gitignore  .gitignore_additions  .gitignore_recommendations.md  .gitmodules  .markdownlint.json  .phase1.3-progress.md  .pre-commit-config.yaml  .validation-report.md  .vercelignore  .zshrc.sparc-m3  4.30-sprints.md  ACTUAL_WORKFLOW.md  ADK-STARTER-PACK-README.md  ADK_COMPLIANCE_IMPLEMENTATION_PLAN.md  ADK_COMPLIANCE_PLAN_V2.md  ADK_DOCUMENT_PROCESSING_IMPLEMENTATION_SUMMARY.md  ADK_ENHANCEMENTS_COMPLETE.md  ADK_EVALUATION_FRAMEWORK_FINAL_SUMMARY.md  ADK_GOOGLE_SEARCH_UPGRADE.md  ADK_HYBRID_MIGRATION_PLAN.md  ADK_IMPLEMENTATION_COMPLETE.md  ADK_INTEGRATION_COMPLETE.md  ADK_MEMORY_CONFIGURATION_CHANGES_SUMMARY.md  ADK_MEMORY_MONITORING_IMPLEMENTATION_SUMMARY.md  ADK_PRODUCTION_ENABLED.md  ADK_TOOL_TYPES_ANALYSIS.md  (+568 more)
.archive/: ADK_COMPLIANT_ARCHITECTURE_V2.md  ARCHIVE_INDEX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  MINIMAL_DISRUPTION_MIGRATION_ROADMAP.md  README.md  SECURITY.md
.archive-7.22.25/: current-agent-architecture.md  preservation_manifest.txt
.claude/: ADMIN_DASHBOARD_DEPLOYMENT.md  ADMIN_DASHBOARD_SUMMARY.md  AI_CODE_REVIEW_REPORT.md  AI_ELEMENTS_DEFERRED_FEATURES.md  AI_ELEMENTS_DEPENDENCY_ANALYSIS.md  AI_ELEMENTS_IMPLEMENTATION_PLAN.md  AI_ELEMENTS_INTEGRATION_FINAL.md  AI_ELEMENTS_QUICK_REFERENCE.md  AI_ELEMENTS_SUMMARY.md  ALWAYS_SEARCH_MODE.md  ANALYTICS_VIEWS_SECURITY_ASSESSMENT.md  ANIMATION_MIGRATION_GUIDE.md  API_ERROR_HANDLER_FIX.md  API_KEY_ROTATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARTIFACT_FIX_SUMMARY.md  ARTIFACT_GENERATION_FIX_NOV_2025.md  ARTIFACT_IMPORT_FIX_SUMMARY.md  ARTIFACT_PROMPT_OPTIMIZATION.md  ARTIFACT_RATE_LIMITING_AUDIT.md  ARTIFACT_RATE_LIMITING_IMPLEMENTATION.md  ARTIFACT_RENDER_SIGNAL_FLOW.md  ARTIFACT_RENDER_SIGNAL_IMPLEMENTATION.md  ARTIFACT_SYSTEM.md  ARTIFACT_SYSTEM_CODE_REVIEW.md  ARTIFACT_TESTING_SUMMARY.md  ARTIFACT_TYPE_TEST_PROMPTS.md  BUILD_AND_DEPLOYMENT.md  CHAIN_OF_THOUGHT_BUG_ANALYSIS.md  CHAIN_OF_THOUGHT_DOCUMENTATION_REVIEW.md  CHAIN_OF_THOUGHT_FIX_SUMMARY.md  CHAIN_OF_THOUGHT_IMPLEMENTATION.md  CHAIN_OF_THOUGHT_PR_SUMMARY.md  CHAT_FUNCTION_REASONING_INTEGRATION.md  CHROME_MCP_COMMANDS.md  CHROME_MCP_SETUP_COMPLETE.md  CLAUDE_TICKER_CORRECT_PLAN.md  CODE_REVIEW_FIXES_SUMMARY.md  CODE_VERIFICATION_SUMMARY.md  (+150 more)
.claude_workspace/: CLEANUP_LOG.md  WORKSPACE_STRUCTURE.md  cleanup.sh
.cline-rules/: memoryProtocol.md  productContext.md  progress.md  systemPatterns.md  techContext.md
.cloudbuild/: deploy-to-prod.yaml  staging.yaml
.githooks/: pre-commit
.github/: CI-SETUP.md  ISSUE_126_CHECKLIST.md  ISSUE_126_IMPLEMENTATION_SUMMARY.md  ISSUE_129_IMPLEMENTATION_SUMMARY.md  PR-410-CRITICAL-ISSUES.md  PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETTINGS.md  branch-protection-rules.md  dependabot.yml
.next/: BUILD_ID  build-manifest.json  prerender-manifest.json  required-server-files.json  trace
.serena/: project.yml
.taskmaster/: config.json  state.json
Local Startup/: start_vana.bat  start_vana.command  startup_scripts_readme.md
PRPs/: FUTURE_FEATURES.md  PHASE_ROADMAP.md  README.md  phase1-validate-orchestrator.md
adk-setup/: deploy.py  requirements.txt
agent/: __init__.py  cli.py  core.py  task_parser.py
agent_backup_20250530_182217/: adk_agent.py  agent_engine_integration.py  cli.py  core.py  logging.py  task_parser.py
agents/: README.md  ben_agent.py  juno_agent.py  kail_agent.py  max_agent.py  onboard_agent.py  rhea_agent.py  sage_agent.py
analysis/: COMPREHENSIVE_LEARNINGS_SYNTHESIS.md  ad-research-log.md  final-vana-recommendations.md  vana_comprehensive_improvement_plan.md
api/: openapi.yaml
app/: .env.local.template  __init__.py  adk_server.py  agent.py  config.py  enhanced_callbacks.py  models.py  pytest-security.ini  pytest.ini  research_agents.py  server.py  simple_auth.py  simple_auth_routes.py
archive/: .env.production  ARCHIVE_INDEX.md  README.md  direct_ragie_test.py  populate_vector_search.py
ben/: ben_prompt_v1.4.md
cloud_function_deploy/: main.py
config/: __init__.py  agents.yaml  environment.py  logging.yaml  mcp-config.json  mcp_config.py  mcp_memory_config.py  performance-budgets.js  self-healing-hooks.json  settings.py
configs/: Dockerfile.chrome-devtools-mcp  chrome-devtools-mcp.yaml
dashboard/: README.md  app.py  config.json  dashboard.html  dashboard_server.py  flask_app.py  integration_app.py  launch.sh  requirements.txt  start_enhanced_dashboard.py
deployment/: Dockerfile  README-Enhanced-Build.md  cloud-run-session-persistence.md  cloudbuild-dev.yaml  cloudbuild-enhanced-prod.yaml  cloudbuild-enhanced-simple.yaml  cloudbuild-enhanced.yaml  cloudbuild-prod.yaml  cloudbuild.yaml  deploy-dev.sh  deploy-enhanced-dev.sh  deploy-enhanced-prod.sh  deploy-prod.sh  deploy.sh
docs/: 4WEEK_IMPROVEMENT_PLAN_COMPLETE.md  4_AGENT_SWARM_METHODOLOGY.md  ADK_COMPLIANCE_FIXES.md  ADK_COMPLIANCE_REPORT.md  ADK_COMPLIANCE_STATUS.md  ADK_IMPLEMENTATION_SUMMARY.md  ADK_MEMORY_CONFIGURATION_MIGRATION_GUIDE.md  ADK_SAMPLE_COMPARISON.md  ADK_SOURCE_OF_TRUTH.md  ADK_UI_RESTORATION_GUIDE.md  AGENTIC_AI_GUIDE.md  AGENTS.md  AGENT_HANDOFF.md  AGENT_OPTIMIZATION_IMPLEMENTATION_GUIDE.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_OVERVIEW.md  ARTIFACT_EXPORT_SYSTEM.md  ARTIFACT_PROMPTS.md  ARTIFACT_SYSTEM.md  ARTIFACT_SYSTEM_IMPROVEMENT_PLAN.md  ARTIFACT_VERSIONING.md  AUTHENTICATION_STRATEGY.md  AUTH_MIDDLEWARE_INTEGRATION.md  BACKEND-SETUP.md  BACKEND_API_RESTORATION.md  BUG-FIX-TOOL-CALL-FAILURE.md  CACHE_BUSTING_QUICK_START.md  CACHE_BUSTING_STRATEGY.md  CAROUSEL_PROMPTS.md  CHAIN_OF_THOUGHT.md  CHANGELOG.md  CHAT-ACTIONS-IMPLEMENTATION-PLAN.md  CHECKLIST.md  CHROME_DEVTOOLS_MCP_SETUP.md  CHROME_DEVTOOLS_SETUP.md  CHUNK_BOUNDARY_FIX.md  CIRCUIT_BREAKER.md  (+280 more)
eval/: vana_orchestration_test.evalset.json
frontend/: .env  (+77 more)
(+5258 files in other folders)
