[tool.poetry]
name = "vana"
version = "0.1.0"
description = "VANA - Advanced AI Agent System with Google ADK Integration"
authors = ["Nick <110638609+NickB03@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "agents"}, {include = "lib"}, {include = "tools"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
# CRITICAL: Python 3.13+ required for production stability
# DO NOT downgrade - will cause production errors
python = ">=3.13,<3.14"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
aiohttp = "^3.9.0"
google-adk = "^1.1.1"
google-cloud-aiplatform = "^1.95.1"
google-genai = "^1.18.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.1.0"
mcp = "^1.9.2"
typer = "^0.16.0"
rich = "^14.0.0"
httpx = "^0.28.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"
python-multipart = "^0.0.20"
psutil = "^7.0.0"
playwright = "^1.52.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
bandit = "^1.7.0"
pre-commit = "^3.0.0"

[tool.poetry.extras]
document-processing = ["PyPDF2", "Pillow", "pytesseract"]

[tool.poetry.urls]
Homepage = "https://github.com/NickB03/vana"
Repository = "https://github.com/NickB03/vana.git"
Documentation = "https://github.com/NickB03/vana/blob/main/README.md"
"Bug Tracker" = "https://github.com/NickB03/vana/issues"

# Code Quality Tools Configuration

[tool.black]
line-length = 120
target-version = ['py312']  # Black doesn't support py313 yet, use py312 for now
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | archived_scripts
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["archived_scripts/*", "*.backup"]

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "F401",  # imported but unused (handled by isort)
]
exclude = [
    ".git",
    "__pycache__",
    "*.pyc",
    ".venv",
    "venv",
    "archived_scripts",
    "*.backup",
    "build",
    "dist",
    ".eggs",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false  # Gradually enable
check_untyped_defs = true
disallow_untyped_decorators = false  # Gradually enable
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "spacy.*",
    "nltk.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "archived_scripts.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "archived_scripts", "*.backup"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for specific cases

[tool.pytest.ini_options]
# asyncio support for modern async code
asyncio_mode = "auto"

# Define the single source of truth for test paths
testpaths = ["tests"]

# A unified and comprehensive set of markers for the full test plan
markers = [
    "unit: (Level 1) Fast, isolated tests for a single component (e.g., a tool).",
    "agent: (Level 2) Tests for a single agent's logic and reasoning.",
    "integration: (Level 3) Tests for communication between 2-3 agents.",
    "e2e: (Level 4) Full system workflow tests for complex scenarios.",
    "security: Tests for security features, access control, and credentials.",
    "performance: Slow tests that benchmark performance and measure latency.",
    "network: Tests that require real network access to external services.",
    "slow: A general marker for any test that takes a long time to run.",
]

# Recommended, robust options for the test runner.
# -v: verbose output
# -ra: show extra summary info for all but passing tests
# --strict-markers: fail on unregistered markers
# --disable-warnings: hide deprecation and other warnings for cleaner output
addopts = "-ra -v --strict-markers --disable-warnings"

# Filter out common, noisy warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:google.*",
]


[tool.coverage.run]
source = ["lib", "agents", "tools"]
omit = [
    "*/tests/*",
    "*/archived_scripts/*",
    "*/*.backup",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
