[project]
name = "vana"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "google-adk~=1.8.0",
    "opentelemetry-exporter-gcp-trace~=1.9.0",
    "google-cloud-logging~=3.11.4",
    "google-cloud-aiplatform[evaluation]~=1.103.0",
    "fastapi~=0.115.8",
    "uvicorn~=0.34.0",
    "psycopg2-binary>=2.9.10",
    "chromadb>=1.0.15",
    "sentence-transformers>=5.0.0",
    "mcp>=1.12.1",
    "litellm>=1.51.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "aiofiles>=24.1.0",
    # Authentication dependencies
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
    "google-auth>=2.30.0",
    "google-cloud-iam>=2.12.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
]

requires-python = ">=3.10,<3.14"


[dependency-groups]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    "nest-asyncio>=1.5.6,<2.0.0",
    "psutil>=5.9.0,<6.0.0",
    "bandit[toml]>=1.7.0,<2.0.0",
    "safety>=2.3.0,<4.0.0",
    "ruff>=0.1.0,<1.0.0",  # Added ruff to dev group for CI compatibility
    "mypy>=1.0.0,<2.0.0",  # Added mypy to dev group for CI compatibility
    "types-pyyaml>=6.0.12,<7.0.0",  # Add type stubs for mypy
    "types-requests>=2.31.0,<3.0.0",  # Add type stubs for mypy
]
lint = [
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "codespell>=2.2.0,<3.0.0",
    "types-pyyaml>=6.0.12,<7.0.0",
    "types-requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit~=1.7.5",
]
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.mypy]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false
check_untyped_defs = false
disallow_subclassing_any = false
warn_incomplete_stub = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = false
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return", "no-untyped-def", "assignment", "operator", "attr-defined", "arg-type", "index", "union-attr", "var-annotated", "no-redef", "unreachable", "import-untyped", "valid-type", "typeddict-unknown-key", "call-arg", "annotation-unchecked"]

exclude = [".venv", "tests/", "scripts/", "src/shell-validator/", "src/hooks/"]

[tool.codespell]
ignore-words-list = "rouge,DAA,deques"
skip = "./locust_env/*,uv.lock,.venv/,./venv/,./frontend,**/*.ipynb"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = [
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=5",
    "--junit-xml=pytest-report.xml",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--durations=10",
    "--timeout=300"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
norecursedirs = ["tests/load_test", "tests/performance_load_test.py", "tests/smoke_test_production.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]
markers = [
    "integration: mark test as integration test",
    "e2e: mark test as end-to-end test", 
    "performance: mark test as performance test",
    "slow: mark test as slow running",
    "hook_validation: mark test as hook validation test",
    "requires_server: mark test as requiring running server"
]

[tool.hatch.build.targets.wheel]
packages = ["app","frontend"]
